<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SurveyActivity">

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="480dp"
        android:padding="8dp"
        android:text="Example question 1 "
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Back"
        android:layout_width="85dp"
        android:layout_height="61dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="544dp"
        android:backgroundTint="#0091EA"
        android:padding="8dp"
        android:text="Back"
        android:textColor="#fff"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/answer1"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="400dp"
        android:background="@drawable/ripple"
        android:padding="8dp"
        android:text="answer 1"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/answer2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="300dp"
        android:background="@drawable/ripple"
        android:padding="8dp"
        android:text="answer 2"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/answer3"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/ripple"
        android:padding="8dp"
        android:text="answer 3"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/answer4"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/ripple"
        android:padding="8dp"
        android:text="answer 4"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>